2003-03-05  Eric Sandall <eric@sandall.us>

		Fixed Bug #2031

		Modified setiathome and xsetiathome to pass any variables
		sent to them to the actual binaries

		Now only tries to install xsetiathome if it is included in
		the package, as some (SPARC) do not have an xsetiathome

2002-09-19  Eric Sandall <eric@sandall.us>

		Created spell