@@ -1,10 +1,10 @@
            SPELL=setiathome
          VERSION=3.03
-          SOURCE=${SPELL}-${VERSION}.${ARK}.tar
-SOURCE_DIRECTORY=${BUILD_DIRECTORY}/${SPELL}-${VERSION}.${ARK}
+          SOURCE=${SPELL}-${VERSION}.${ARK:-i386-pc-linux-gnulibc1-static}.tar
+SOURCE_DIRECTORY=${BUILD_DIRECTORY}/${SPELL}-${VERSION}.${ARK:-i386-pc-linux-gnulibc1-static}
    SOURCE_URL[0]=http://wcarchive.cdrom.com/pub/${SPELL}/${SOURCE}
    SOURCE_URL[1]=ftp://alien.ssl.berkeley.edu/pub/${SOURCE}
-          MD5[0]=${PREPARE_MD5}
+          MD5[0]=${PREPARE_MD5:-f1c9cc44ef75f5ca7c07b39edc71f71e}
         WEB_SITE=http://setiathome.ssl.berkeley.edu/
          ENTERED=20020919
          UPDATED=20020919
