@@ -1,0 +1,4 @@
+if  [  -x  /etc/init.d/setiathome.sh  ]
+then
+  /etc/init.d/setiathome.sh  stop
+fi
