@@ -1,5 +1,6 @@
 #!/bin/sh
 
 cd  /usr/share/setiathome
-./setiathome  $@
+./setiathome  $@  &
 cd  -
+exit  0
