@@ -1,5 +1,5 @@
 #!/bin/sh
 
 cd  /usr/share/setiathome
-./xsetiathome  $@
+./xsetiathome  $@  &
 cd  -
