@@ -1,3 +1,14 @@
+2003-03-31  Eric Sandall <eric@sandall.us>
+
+		Added init script using sorcery's init.d installer
+
+		Now asks if you want to reconfigure, so it no longer
+		stops installs
+
+		If no SPELL_CONFIG is found, defaults to i386
+
+		Added PRE_REMOVE and POST_INSTALL for starting scripts
+
 2003-03-05  Eric Sandall <eric@sandall.us>
 
 		Fixed Bug #2031
